update projects, restyled some pages, added Resume to download

--- a/html/projects.html
+++ b/html/projects.html
@@ -18,21 +18,25 @@
         <p>A collection of my favorite work — from academic assignments to personal builds.</p>
     </div>
 
+
+
+
     <div class="project-grid">
+
         <div class="project-card">
-            <h3>Grade Calculator</h3>
+            <h3>Web Development Projects</h3>
             <p>
-                Java-based desktop app that helps students manage multiple courses, weighted categories,
-                and custom grading rubrics. Includes predictive grade calculations for target goals.
+                A collection of labs and assignments from my current Web Development class at Montana State University.
+                Covers HTML, CSS, PHP, and database integration using the LAMP stack.
             </p>
-            <div class="tech">Java · Swing · MVC · Serialization</div>
+            <div class="tech">HTML · CSS · PHP · MariaDB · LAMP</div>
             <div class="project-links">
-                <a href="https://github.com/YOUR_GITHUB/grade-calculator" target="_blank" rel="noopener noreferrer">GitHub</a>
+                <a href="https://jordan-unzaga.github.io/" target="_blank" rel="noopener noreferrer">GitHub</a>
             </div>
         </div>
 
         <div class="project-card">
-            <h3>Drink Sync - Drink Journal Web App</h3>
+            <h3>Drink Sync</h3>
             <p>
                 A PHP + SQL journaling app that lets users log drinks, rate them, and describe flavors.
                 Includes CRUD functionality and image uploads. Built for MSU's LAMP environment.
@@ -56,15 +60,43 @@
         </div>
 
         <div class="project-card">
-            <h3>Battleship GUI Game</h3>
+            <h3>Box Waffles</h3>
             <p>
-                One of my first, finished, Java projects. Play the BattleShip game against an "AI".
+                A 2D shooter built with Python and Pygame featuring original pixel art,
+                sound effects, and fast-paced arcade gameplay. Includes enemy AI,
+                score tracking, and smooth sprite-based animation.
             </p>
-            <div class="tech">Java · JPanel · MVC Architecture</div>
+            <div class="tech">Python · Pygame · Aseprite · Audacity</div>
             <div class="project-links">
-                <a href="https://github.com/jordan-unzaga/BattleShipGUIGame" target="_blank" rel="noopener noreferrer">GitHub</a>
+                <a href="https://github.com/YOUR_GITHUB/pixel-blaster" target="_blank" rel="noopener noreferrer">GitHub</a>
             </div>
         </div>
+
+
+        <div class="project-card">
+            <h3>Java Battleship Game</h3>
+            <p>
+                A turn-based Battleship clone built with Swing and JPanel. Includes a simple AI opponent,
+                grid visuals, and hit/miss effects.
+            </p>
+            <div class="tech">Java · Swing · JPanel · OOP</div>
+            <div class="project-links">
+                <a href="https://github.com/YOUR_GITHUB/battleship-game" target="_blank" rel="noopener noreferrer">GitHub</a>
+            </div>
+        </div>
+
+        <div class="project-card">
+            <h3>C# Shape Maker</h3>
+            <p>
+                Built a lightweight drawing program in C# using WinForms. Handled mouse events to draw to a bitmap, supported multiple colors and brush sizes, and refreshed the canvas efficiently.
+            </p>
+            <div class="tech">C# · Visual Studio · WinForms</div>
+            <div class="project-links">
+                <a href="https://github.com/jordan-unzaga/ShapeMaker" target="_blank" rel="noopener noreferrer">GitHub</a>
+            </div>
+        </div>
+
+
     </div>
 </main>
 
