--- a/html/resume.html
+++ b/html/resume.html
@@ -20,13 +20,12 @@
         <div class="contact-info">
             <div><a href="mailto:jordan.unzaga22@gmail.com">jordan.unzaga22@gmail.com</a></div>
             <div><a href="https://github.com/jordan-unzaga" target="_blank" rel="noopener noreferrer">github.com/jordan-unzaga</a></div>
-<!--            <div><a href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank" rel="noopener noreferrer">LinkedIn</a></div>-->
+            <div><a href="https://www.linkedin.com/in/jordan-unzaga-432226391/" target="_blank" rel="noopener noreferrer">LinkedIn</a></div>
         </div>
     </div>
 
     <div class="btn-row">
-        <!-- if you upload resume.pdf to root, this will work -->
-        <a href="../resume.pdf" class="btn" target="_blank" rel="noopener noreferrer">Download PDF</a>
+        <a href="../res/Jordan-Unzaga-Resume-Fall2025.pdf" class="btn" target="_blank" rel="noopener noreferrer">Download PDF</a>
         <a href="mailto:jordan.unzaga22@gmail.com?subject=Regarding%20your%20portfolio" class="btn secondary">Email me</a>
     </div>
 
