--- a/index.html
+++ b/index.html
@@ -35,20 +35,28 @@
     <h2>Featured Projects</h2>
     <div class="project-grid">
         <div class="project-card">
-            <h3>Battleship GUI Game</h3>
+            <h3>Java Battleship Game</h3>
             <p>
-                Java Battle Ship Game. Play against a noob AI! MVC Architecture, Serialization, and JPanel!
+                A turn-based Battleship clone built with Swing and JPanel. Includes a simple AI opponent,
+                grid visuals, and hit/miss effects.
             </p>
         </div>
 
         <div class="project-card">
-            <h3>Drink Journal Web App</h3>
-            <p>PHP + SQL web app that lets users log, rate, and describe drinks, built with a reusable component system.</p>
+            <h3>Drink Sync</h3>
+            <p>
+                A PHP + SQL journaling app that lets users log drinks, rate them, and describe flavors.
+                Includes CRUD functionality and image uploads. Built for MSU's LAMP environment.
+            </p>
         </div>
 
         <div class="project-card">
-            <h3>Little Man Computer Assembler</h3>
-            <p>Java assembler and emulator for the LMC instruction set, with full JUnit test coverage and error handling.</p>
+            <h3>Box Waffles</h3>
+            <p>
+                A 2D shooter built with Python and Pygame featuring original pixel art,
+                sound effects, and fast-paced arcade gameplay. Includes enemy AI,
+                score tracking, and smooth sprite-based animation.
+            </p>
         </div>
     </div>
 </section>
