--- a/html/projects.html
+++ b/html/projects.html
@@ -31,7 +31,7 @@
             </p>
             <div class="tech">HTML · CSS · PHP · MariaDB · LAMP</div>
             <div class="project-links">
-                <a href="https://jordan-unzaga.github.io/" target="_blank" rel="noopener noreferrer">GitHub</a>
+                <a href="https://jordan-unzaga.github.io/webdev/" target="_blank" rel="noopener noreferrer">Link</a>
             </div>
         </div>
 
@@ -68,7 +68,7 @@
             </p>
             <div class="tech">Python · Pygame · Aseprite · Audacity</div>
             <div class="project-links">
-                <a href="https://github.com/YOUR_GITHUB/pixel-blaster" target="_blank" rel="noopener noreferrer">GitHub</a>
+                <a href="https://github.com/jordan-unzaga/BoxWaffles" target="_blank" rel="noopener noreferrer">GitHub</a>
             </div>
         </div>
 
