--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="images/JULogo.png">
     <title>Jordan Unzaga | Portfolio</title>
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/base.css">
