updated picture, about page, and some colors

--- a/html/about.html
+++ b/html/about.html
@@ -15,14 +15,14 @@
 <main class="page-wrapper">
     <h1>About Me</h1>
     <p>
-        Hey, I’m <strong>Jordan Unzaga</strong> — a Computer Science major at Montana State University who loves building practical, well-designed software.
+        Hey, I’m <strong>Jordan Unzaga</strong>, a Computer Science major at Montana State University who loves building practical, thought-out software.
         I focus on backend systems, web development, and creative technical projects ranging from full-stack apps to small indie games.
         My goal is to design tools that are both efficient and enjoyable to use.
     </p>
 
     <p>
         I’ve worked with technologies like Java, SQL, PHP, and JavaScript while maintaining a strong focus on clean structure and usability.
-        I enjoy projects that challenge both logic and creativity — like writing graph algorithms one day and pixel art interfaces the next.
+        I enjoy projects that challenge both logic and creativity!
     </p>
 
     <section class="skills">
@@ -36,19 +36,20 @@
             <span>Git & GitHub</span>
             <span>Linux / Bash</span>
             <span>Database Design</span>
+            <span>TDD</span>
         </div>
     </section>
 
     <p style="margin-top:2rem;">
         When I’m not coding, I’m usually at the gym, cooking, or working on creative side projects like music playlists and game design.
         I love to work with my hands, whether is shaping wood, painting, or playing video games.
-        You can check out my work through the <a href="projects.html" style="color:#006fff; text-decoration:none;">Projects</a> page.
+        You can check out my work through the <a href="projects.html" style="color:#6dadff; text-decoration:none;">Projects</a> page.
     </p>
 
     <section class="pixel-art">
         <h2>Pixel Art Showcase</h2>
         <p class="sub">
-            I design pixel art tilesets, scenes, and small maps — here are a few examples of my recent work.
+            I design pixel art tilesets, scenes, and small maps; here are a few examples of my recent work.
         </p>
 
         <div class="pixel-gallery">
