--- a/html/projects.html
+++ b/html/projects.html
@@ -16,7 +16,7 @@
 <main class="page-wrapper">
     <div class="projects-header">
         <h1>Projects</h1>
-        <p>A collection of my favorite work — from academic assignments to personal builds.</p>
+        <p>A collection of my favorite work from academic assignments to personal builds.</p>
     </div>
 
 
